--- a/css/editStyle.css
+++ b/css/editStyle.css
@@ -1,14 +1,19 @@
-#edit{width: 600px; padding: 5px; background: #eee; margin: 0px auto;}
+#edit{width: 600px; padding: 5px; background: #eee; margin: 0px auto; position: relative;}
 #edit textarea{width: 600px; height: 300px;}
 #E_iframe{width:600px; height: 300px; background: #fff;}
 #E_toolbar{width: 600px; overflow: hidden;}
-#E_toolbar .colorpicker{background: #fff; border: 2px solid #ddd}
+#E_toolbar .colorpicker{background: #fff; border: 2px solid #ddd; width: 260px; position:absolute;}
+.colorpicker .cell td{width:12px; height:12px; cursor: pointer;}
 #E_toolbar #color_result{height: 20px;}
 #E_toolbar .button{display: block; float:left; border: 1px solid #ccc; margin: 2px 0px 2px 5px; cursor: pointer; background-image: url('./img/o_tinymce.gif');}
 #E_toolbar .button:hover{color:#fff;border-color:#fff #aaa #aaa #fff;}
-div.fontPicker{display: none; height:150px; overflow: auto; position: absolute; background: #fff; border: 1px solid #ddd;}
+div.fontPicker{height:150px; overflow: auto; position: absolute; background: #fff; border: 1px solid #ddd;}
 div.fontPicker a{display: block; padding: 5px 2px; cursor: pointer;}
 div.fontPicker a:hover{background: #ddd}
-.colorpicker{display: none; position:absolute;}
-.colorpicker .cell td{width:12px; height:12px; cursor: pointer;}
+div.insertImage{width: 600px; height: 300px; background: #fff; position: absolute; top: 50px; left: 50%; margin-left: -300px; border: 1px solid #ddd; border-radius: 5px; font-size: 14px}
+div.insertImage .title{background: rgb(249,247,234); color: rgb(189,33,0);padding: 10px 5px; overflow: hidden;}
+div.insertImage .title b{display: block; width: 10px; height: 10px; background: url('./img/close.jpg') no-repeat; background-size: 10px 10px; float: right; cursor: pointer;}
+div.insertImage .img-box{margin: 10px; background: rgb(244,244,244); border: 1px solid #ddd; height: 250px;border-radius: 5px}
+div.insertImage .uploadbtn{width: 100px; height: 30px; cursor: pointer; font-size: 14px; color: #fff; background: -webkit-gradient(linear, 0 0, 0 100%, from(#ffaf44), to(#ff7e28)); background: -moz-linear-gradient(top, #ffaf44, #ff7e28); background: -o-linear-gradient(top, #ffaf44, #ff7e28); background-color: #ff7e28; border: 1px solid #ff7617; position: absolute; top: 50%; left: 50%; margin-top: -15px; margin-left: -50px;}
 #color_view{width:100px;}
+
